[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/ai/mob_stats.gd" type="Script" id=1]
[ext_resource path="res://src/ai/mob_base.gd" type="Script" id=2]
[ext_resource path="res://src/entity.gd" type="Script" id=3]
[ext_resource path="res://src/ai/mob_attack.gd" type="Script" id=4]
[ext_resource path="res://src/custom_animator_3d.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/frames/cyclops_frames.tres" type="SpriteFrames" id=6]
[ext_resource path="res://prefabs/mob_components/mob_motor.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/ai/mobs/cyclops_ticker.gd" type="Script" id=8]
[ext_resource path="res://prefabs/mob_components/mob_sound_base.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/ai/mob_motor_flying.gd" type="Script" id=10]
[ext_resource path="res://prefabs/mob_components/orb_shield.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/patterns/pattern_cube_volume.gd" type="Script" id=12]
[ext_resource path="res://prefabs/mob_components/omni_attack_charge.tscn" type="PackedScene" id=13]
[ext_resource path="res://influence_map/influence_agent.tscn" type="PackedScene" id=15]
[ext_resource path="res://prefabs/mob_components/teleport_column.tscn" type="PackedScene" id=16]

[sub_resource type="SphereShape" id=1]

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.2, 0.2, 1 )

[node name="mob_cyclops" type="KinematicBody"]
collision_layer = 2
collision_mask = 71
script = ExtResource( 2 )

[node name="teleport_column" parent="." instance=ExtResource( 16 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="influence_agent" parent="." instance=ExtResource( 15 )]

[node name="sprite" type="AnimatedSprite3D" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, -0.5, 0 )
offset = Vector2( 0, 64 )
billboard = 2
shaded = true
frames = ExtResource( 6 )
script = ExtResource( 5 )
active = true
animationSet = "cyclops"
defaultAnimation = "walk"

[node name="body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 1 )

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0 )

[node name="omni_attack_charge" parent="head" instance=ExtResource( 13 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="attacks" type="Node" parent="."]

[node name="attack2" type="Node" parent="attacks"]
script = ExtResource( 4 )
minUseRange = 20.0
attackCount = 4
windUpTime = 1.5
windDownTime = 1.0
repeatTime = 0.25
showOmniCharge = true

[node name="pattern" type="Node" parent="attacks/attack2"]
script = ExtResource( 12 )
count = 12
minOffset = Vector3( -1.5, -1.5, -1.5 )
maxOffset = Vector3( 1.5, 1.5, 1.5 )

[node name="attack" type="Node" parent="attacks"]
script = ExtResource( 4 )
attackCount = 3
windDownTime = 0.5

[node name="motor" parent="." instance=ExtResource( 7 )]
script = ExtResource( 10 )

[node name="stats" type="Node" parent="."]
script = ExtResource( 1 )
entityType = "mob_titan"
health = 300
moveSpeed = 7.5
moveTime = 0.995
stunThreshold = 100

[node name="Entity" type="Node" parent="."]
script = ExtResource( 3 )
prefabName = "mob_cyclops"

[node name="ticker" type="Spatial" parent="."]
script = ExtResource( 8 )

[node name="mob_sound" parent="." instance=ExtResource( 9 )]

[node name="orb" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
visible = false

[node name="orb" type="Spatial" parent="orb"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5 )

[node name="orb_shield" parent="orb/orb" instance=ExtResource( 11 )]
