[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/ai/mob_stats.gd" type="Script" id=1]
[ext_resource path="res://src/ai/mob_base.gd" type="Script" id=2]
[ext_resource path="res://src/entity.gd" type="Script" id=3]
[ext_resource path="res://src/ai/mob_attack.gd" type="Script" id=4]
[ext_resource path="res://src/custom_animator_3d.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/frames/punk_frames.tres" type="SpriteFrames" id=6]
[ext_resource path="res://prefabs/mob_components/mob_motor.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/ai/ai_ticker.gd" type="Script" id=8]
[ext_resource path="res://assets/sounds/mob/punk/punk_alert_1.wav" type="AudioStream" id=9]
[ext_resource path="res://src/ai/mob_sound.gd" type="Script" id=10]
[ext_resource path="res://prefabs/mob_components/orb_shield.tscn" type="PackedScene" id=11]
[ext_resource path="res://zqf/zqf_orbiter.gd" type="Script" id=12]
[ext_resource path="res://src/ai/mob_motor_ground.gd" type="Script" id=13]
[ext_resource path="res://assets/sprites/frames/gfx_frames.tres" type="SpriteFrames" id=14]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.7

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.2, 0.2, 1 )

[node name="mob_punk" type="KinematicBody"]
collision_layer = 2
collision_mask = 70
script = ExtResource( 2 )
roleClass = 2
corpsePrefab = "mob_punk"

[node name="sprite" type="AnimatedSprite3D" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
offset = Vector2( 0, 32 )
billboard = 2
shaded = true
frames = ExtResource( 6 )
script = ExtResource( 5 )
active = true
animationSet = "punk"
defaultAnimation = "walk"

[node name="body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.85, 0 )
shape = SubResource( 1 )

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="attacks" type="Node" parent="."]

[node name="single_shot" type="Node" parent="attacks"]
script = ExtResource( 4 )
windUpTime = 0.5
windDownTime = 0.5

[node name="motor" parent="." instance=ExtResource( 7 )]
script = ExtResource( 13 )

[node name="stats" type="Node" parent="."]
script = ExtResource( 1 )
moveSpeed = 6.0
evadeSpeed = 2.0
moveTime = 0.5

[node name="Entity" type="Node" parent="."]
script = ExtResource( 3 )
prefabName = "mob_punk"

[node name="ticker" type="Spatial" parent="."]
script = ExtResource( 8 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
unit_db = 6.0
bus = "game"
script = ExtResource( 10 )

[node name="orbs" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
visible = false

[node name="Spatial" type="Spatial" parent="orbs"]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0 )

[node name="orb" type="Spatial" parent="orbs/Spatial"]
script = ExtResource( 12 )
degreesPerSecond = Vector3( 0, 180, 0 )

[node name="orb_shield" parent="orbs/Spatial/orb" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5 )

[node name="teleport_sprite" type="AnimatedSprite3D" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0.9, 0 )
visible = false
billboard = 1
frames = ExtResource( 14 )
animation = "teleport"
