[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/ai/mob_stats.gd" type="Script" id=1]
[ext_resource path="res://src/ai/mob_base.gd" type="Script" id=2]
[ext_resource path="res://src/entity.gd" type="Script" id=3]
[ext_resource path="res://src/ai/atk_wall_line.gd" type="Script" id=4]
[ext_resource path="res://src/custom_animator_3d.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/frames/spider_frames.tres" type="SpriteFrames" id=6]
[ext_resource path="res://prefabs/mob_components/mob_motor.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/ai/mobs/spider_ticker.gd" type="Script" id=8]
[ext_resource path="res://prefabs/mob_components/teleport_column.tscn" type="PackedScene" id=9]
[ext_resource path="res://prefabs/mob_components/mob_aim_laser.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/ai/mob_motor_ground.gd" type="Script" id=11]
[ext_resource path="res://prefabs/mob_components/mob_fx.tscn" type="PackedScene" id=12]
[ext_resource path="res://prefabs/mob_components/mob_sound_base.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/ai/mobs/spider_sound.gd" type="Script" id=14]
[ext_resource path="res://src/ai/mob_attack.gd" type="Script" id=15]
[ext_resource path="res://prefabs/mob_components/omni_attack_charge.tscn" type="PackedScene" id=16]
[ext_resource path="res://prefabs/mob_components/mob_debuffs.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/sprites/sheets/spider_sheet.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/sheets/spider_sheet_emissive.png" type="Texture" id=19]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
params_billboard_mode = 2
albedo_texture = ExtResource( 18 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 19 )

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.7

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.2, 0.2, 1 )

[node name="mob_spider" type="KinematicBody"]
collision_layer = 2
collision_mask = 70
script = ExtResource( 2 )

[node name="teleport_column" parent="." instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
visible = false

[node name="sprite" type="AnimatedSprite3D" parent="."]
material_override = SubResource( 3 )
offset = Vector2( 0, 32 )
pixel_size = 0.03
billboard = 2
shaded = true
frames = ExtResource( 6 )
frame = 42
script = ExtResource( 5 )
active = true
animationSet = "mob_spider"
defaultAnimation = "walk"

[node name="body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.85, 0 )
shape = SubResource( 1 )

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0 )

[node name="omni_attack_charge" parent="head" instance=ExtResource( 16 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -1 )
visible = false

[node name="mob_aim_laser" parent="head" instance=ExtResource( 10 )]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="mob_fx" parent="." instance=ExtResource( 12 )]

[node name="mob_debuffs" parent="." instance=ExtResource( 17 )]

[node name="attacks" type="Node" parent="."]

[node name="spike_wall" type="Node" parent="attacks"]
script = ExtResource( 4 )
minUseRange = 5.0
windUpTime = 1.5
windDownTime = 2.0
showAimLaser = true
allowMovement = false
cooldown = 3.0
faceTargetDuringWindup = false
faceTargetDuringAttack = false

[node name="spreadshot" type="Node" parent="attacks"]
script = ExtResource( 15 )
maxUseRange = 5.0
attackCount = 4
windDownTime = 0.5
showOmniCharge = true
allowMovement = false

[node name="stats" type="Node" parent="."]
script = ExtResource( 1 )
entityType = "mob_spider"
health = 400
moveSpeed = 3.0
evadeSpeed = 1.0
stunTime = 0.5
stunThreshold = 200
sizeClass = 1

[node name="Entity" type="Node" parent="."]
script = ExtResource( 3 )
prefabName = "mob_spider"

[node name="ticker" type="Spatial" parent="."]
script = ExtResource( 8 )

[node name="motor" parent="." instance=ExtResource( 7 )]
script = ExtResource( 11 )

[node name="AudioStreamPlayer3D" parent="." instance=ExtResource( 13 )]
script = ExtResource( 14 )
